Add a service to relabel /dev at boot
We can't relabel this at update time, since devfs is created
dynamically.

However, some of the contexts in /dev are incorrect at generation
in 7.5

Work around it

Change-Id: I7c14143ce697949ac926bbb5ab4a7097c1287452
Bug-Url: https://bugzilla.redhat.com/show_bug.cgi?id=1555254
Bug-Url: https://bugzilla.redhat.com/show_bug.cgi?id=1560138
Signed-off-by: Ryan Barry <rbarry@redhat.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -44,6 +44,7 @@ EXTRA_DIST = \
   data/imgbase-fix-new-kernel.service \
   data/imgbase-generate-iqn.service \
   data/imgbase-config-vdsm.service \
+  data/imgbase-relabel-dev.service \
   data/imgbased-pool.profile \
   docs/imgbase-copy-bootfiles.8 \
   docs/imgbase-fix-new-kernel.8 \
