Add a service to relabel /dev at boot
We can't relabel this at update time, since devfs is created
dynamically.

However, some of the contexts in /dev are incorrect at generation
in 7.5

Work around it

Change-Id: I7c14143ce697949ac926bbb5ab4a7097c1287452
Bug-Url: https://bugzilla.redhat.com/show_bug.cgi?id=1555254
Bug-Url: https://bugzilla.redhat.com/show_bug.cgi?id=1560138
Signed-off-by: Ryan Barry <rbarry@redhat.com>

--- a/packaging/rpm/imgbased.spec.in
+++ b/packaging/rpm/imgbased.spec.in
@@ -108,6 +108,7 @@ install -Dm 0644 data/imgbase-copy-bootfiles.service %{buildroot}%{_unitdir}/img
 install -Dm 0644 data/imgbase-fix-new-kernel.service %{buildroot}%{_unitdir}/imgbase-fix-new-kernel.service
 install -Dm 0644 data/imgbase-generate-iqn.service %{buildroot}%{_unitdir}/imgbase-generate-iqn.service
 install -Dm 0644 data/imgbase-config-vdsm.service %{buildroot}%{_unitdir}/imgbase-config-vdsm.service
+install -Dm 0644 data/imgbase-relabel-dev.service %{buildroot}%{_unitdir}/imgbase-relabel-dev.service
 install -Dm 0444 data/imgbased-pool.profile %{buildroot}%{_sysconfdir}/lvm/profile/imgbased-pool.profile
 install -Dm 0755 scripts/grub/09_node %{buildroot}%{_sysconfdir}/grub.d/09_node
 %make_install DESTDIR="%{buildroot}"
