--- a/packaging/rpm/imgbased.spec.in
+++ b/packaging/rpm/imgbased.spec.in
@@ -107,6 +107,9 @@ install -Dm 0755 scripts/grub/09_node %{buildroot}%{_sysconfdir}/grub.d/09_node
 %endif
 
 %changelog
+* Thu Mar 29 2018 Ryan Barry <rbarry@redhat.com> - 0.9.56-0
+- Relabel /dev at reboot instead of update
+
 * Thu Mar 22 2018 Ryan Barry <rbarry@redhat.com> - 0.9.55-0
 - Also relabel /dev on updates
 
