--- a/packaging/rpm/imgbased.spec.in
+++ b/packaging/rpm/imgbased.spec.in
@@ -154,6 +154,9 @@ install -Dm 0755 scripts/grub/09_node %{buildroot}%{_sysconfdir}/grub.d/09_node
 %endif
 
 %changelog
+* Tue Apr 10 2018 Ryan Barry <rbarry@redhat.com> - 1.0.13-0
+- systemd-nspawn doesn't work in anaconda. mknod /dev/urandom on new layers
+
 * Sun Apr 08 2018 Ryan Barry <rbarry@redhat.com> - 1.0.12-0
 - Use systemd-nspawn to fix RPM permissions
 
