--- a/packaging/rpm/imgbased.spec.in
+++ b/packaging/rpm/imgbased.spec.in
@@ -154,6 +154,9 @@ install -Dm 0755 scripts/grub/09_node %{buildroot}%{_sysconfdir}/grub.d/09_node
 %endif
 
 %changelog
+* Wed May 02 2018 Ryan Barry <rbarry@redhat.com> - 1.0.15-0
+- Remount /sys and /sys/fs/selinux when re-running %post scripts
+
 * Fri Apr 27 2018 Ryan Barry <rbarry@redhat.com> - 1.0.14-0
 - Improve the grub script logic for LVs
 
