--- a/packaging/rpm/imgbased.spec.in
+++ b/packaging/rpm/imgbased.spec.in
@@ -154,6 +154,9 @@ install -Dm 0755 scripts/grub/09_node %{buildroot}%{_sysconfdir}/grub.d/09_node
 %endif
 
 %changelog
+* Tue May 08 2018 Ryan Barry <rbarry@redhat.com> - 1.0.16-0
+- Use filecmp.cmp when updating /etc
+
 * Wed May 02 2018 Ryan Barry <rbarry@redhat.com> - 1.0.15-0
 - Remount /sys and /sys/fs/selinux when re-running %post scripts
 
