Add release_branches to stdci.yaml
In order to have build-artifacts triggered on every merge,
we need to ahve release_branches conigured in stdci.yaml.

Change-Id: I84156bcffada0a06fc2833f4488c6cb93c327ee6
Signed-off-by: Yuval Turgeman <yturgema@redhat.com>

--- a/stdci.yaml
+++ b/stdci.yaml
@@ -6,3 +6,5 @@ stage:
       runtime-requirements:
         support-nesting-level: 2
 distro: [el7, fc27]
+release_branches:
+    master: ovirt-master
