--- a/stdci.yaml
+++ b/stdci.yaml
@@ -6,6 +6,6 @@ stage:
   - check-patch:
       runtime-requirements:
         support-nesting-level: 2
-distro: [el7, fc28]
+distro: el7
 release_branches:
     ovirt-4.2: ovirt-4.2
