spec: modified python_sitelib for python2
This fixes the build on fc29

Change-Id: Ia1134995838c6c7058f1c66aecb08d6ff1bcce60
Signed-off-by: Yuval Turgeman <yturgema@redhat.com>

--- a/packaging/rpm/imgbased.spec.in
+++ b/packaging/rpm/imgbased.spec.in
@@ -156,7 +156,7 @@ make -C py3 install DESTDIR="%{buildroot}"
 %files -n python-imgbased
 %doc README.md
 %license LICENSE
-%{python_sitelib}/%{name}/
+%{python2_sitelib}/%{name}/
 %endif
 
 %if 0%{?with_python3}
