--- a/packaging/rpm/imgbased.spec.in
+++ b/packaging/rpm/imgbased.spec.in
@@ -154,6 +154,9 @@ install -Dm 0755 scripts/grub/09_node %{buildroot}%{_sysconfdir}/grub.d/09_node
 %endif
 
 %changelog
+* Mon Aug 20 2018 Yuval Turgeman <yturgema@redhat.com> - 1.0.23-1
+- Remove LVs on failed upgrades (rhbz#1601633)
+
 * Fri Jul 20 2018 Ryan Barry <rbarry@redhat.com> - 1.0.22-1
 - Re-execute some vdsm %post scripts during upgrades
 
