--- a/packaging/rpm/imgbased.spec.in
+++ b/packaging/rpm/imgbased.spec.in
@@ -154,6 +154,10 @@ install -Dm 0755 scripts/grub/09_node %{buildroot}%{_sysconfdir}/grub.d/09_node
 %endif
 
 %changelog
+* Mon Sep 17 2018 Yuval Turgeman <yturgema@redhat.com> - 1.0.25-1
+- Add `recover` verb (rhbz#1613931)
+- Check if source file exists before copy (rhbz#1614971)
+
 * Wed Aug 22 2018 Yuval Turgeman <yturgema@redhat.com> - 1.0.24-1
 - Remove broken symlinks when syncing layers (rhbz#1598781)
 
