--- a/packaging/rpm/imgbased.spec.in
+++ b/packaging/rpm/imgbased.spec.in
@@ -154,6 +154,9 @@ install -Dm 0755 scripts/grub/09_node %{buildroot}%{_sysconfdir}/grub.d/09_node
 %endif
 
 %changelog
+* Wed Oct 10 2018 Yuval Turgeman <yturgema@redhat.com> - 1.0.27-1
+- Align upstream sources
+
 * Tue Oct 09 2018 Yuval Turgeman <yturgema@redhat.com> - 1.0.26-1
 - Use lvremove --force during garbage collection (rhbz#1632585)
 
