--- a/configure.ac
+++ b/configure.ac
@@ -38,7 +38,7 @@ AC_SUBST([CENTOS], [[`rpm --eval '%{centos}'|sed 's/[^0-9]//g'`]])
 AC_SUBST([PLATFORM])
 AC_SUBST([REVISION], "git"[m4_esyscmd_s([git log -n1 --format=%h])])
 AC_SUBST([RELEASE], [0.[`date '+%Y%m%d%H%M'`]])
-AC_SUBST([am__tar], ['tar -chpf - "$$tardir" --mtime=0 --atime-preserve=system --owner=root --group=root'])
+AC_SUBST([am__tar], ['find "$$tardir" -print -perm /g=w -exec chmod g-w {} \; | sort | tar --no-recursion --mtime="1970-01-01 00:00Z" --owner=root --group=root -chpf - -T -'])
 
 if test "$FEDORA"; then
     PLATFORM=Fedora$FEDORA
