--- a/packaging/rpm/imgbased.spec.in
+++ b/packaging/rpm/imgbased.spec.in
@@ -66,7 +66,7 @@ BuildRequires:       python-six
 %endif
 
 %description -n python-imgbased
-python3-imgbased is a python 3 library to manage lvm layers
+python-imgbased is a python 2 library to manage lvm layers
 %endif
 
 %if 0%{?with_python3}
