--- a/packaging/rpm/imgbased.spec.in
+++ b/packaging/rpm/imgbased.spec.in
@@ -154,6 +154,9 @@ install -Dm 0755 scripts/grub/09_node %{buildroot}%{_sysconfdir}/grub.d/09_node
 %endif
 
 %changelog
+* Tue Oct 23 2018 Yuval Turgeman <yturgema@redhat.com> - 1.0.29-1
+- Rename and untag volumes on upgrades (rhbz#1641543)
+
 * Thu Oct 11 2018 Yuval Turgeman <yturgema@redhat.com> - 1.0.28-1
 - Updated rpm description
 
