--- a/packaging/rpm/imgbased.spec.in
+++ b/packaging/rpm/imgbased.spec.in
@@ -175,6 +175,12 @@ make -C py3 install DESTDIR="%{buildroot}"
 %endif
 
 %changelog
+* Tue Nov 20 2018 Yuval Turgeman <yturgema@redhat.com> - 1.1.1-1
+- Rename volumes bz#1641543
+- Conditionally migrate ntp to chrony bz#1638606
+- Handle fsck return code bz#1645395
+- Be careful when handling grub.cfg
+
 * Sun Oct 14 2018 Yuval Turgeman <yturgema@redhat.com> - 1.1.0-1
 - Initial build for 4.3
 
