--- a/packaging/rpm/imgbased.spec.in
+++ b/packaging/rpm/imgbased.spec.in
@@ -119,12 +119,7 @@ install -Dm 0644 src/plugin-yum/imgbased-persist.py \
 install -Dm 0644 src/plugin-yum/imgbased-persist.conf \
                  %{buildroot}/%{_sysconfdir}/yum/pluginconf.d/imgbased-persist.conf
 %endif
-install -Dm 0644 data/imgbase-clean-grub.service %{buildroot}%{_unitdir}/imgbase-clean-grub.service
-install -Dm 0644 data/imgbase-copy-bootfiles.service %{buildroot}%{_unitdir}/imgbase-copy-bootfiles.service
-install -Dm 0644 data/imgbase-fix-new-kernel.service %{buildroot}%{_unitdir}/imgbase-fix-new-kernel.service
-install -Dm 0644 data/imgbase-generate-iqn.service %{buildroot}%{_unitdir}/imgbase-generate-iqn.service
-install -Dm 0644 data/imgbase-config-vdsm.service %{buildroot}%{_unitdir}/imgbase-config-vdsm.service
-install -Dm 0644 data/imgbase-relabel-dev.service %{buildroot}%{_unitdir}/imgbase-relabel-dev.service
+install -Dm 0644 data/imgbase-setup.service %{buildroot}%{_unitdir}/imgbase-setup.service
 install -Dm 0444 data/imgbased-pool.profile %{buildroot}%{_sysconfdir}/lvm/profile/imgbased-pool.profile
 install -Dm 0755 scripts/grub/09_node %{buildroot}%{_sysconfdir}/grub.d/09_node
 
@@ -141,14 +136,10 @@ make -C py3 install DESTDIR="%{buildroot}"
 %doc README.md
 %license LICENSE
 %{_sbindir}/imgbase
-%{_sbindir}/imgbase-copy-bootfiles
-%{_sbindir}/imgbase-fix-new-kernel
 %{_datadir}/%{name}/hooks.d/
 %{_mandir}/man8/imgbase.8*
-%{_mandir}/man8/imgbase-copy-bootfiles.8*
-%{_mandir}/man8/imgbase-fix-new-kernel.8*
 /%{_docdir}/%{name}/*.asc
-%{_unitdir}/imgbase-*.service
+%{_unitdir}/imgbase-setup.service
 %{_sysconfdir}/grub.d/09_node
 %{_sysconfdir}/lvm/profile/imgbased-pool.profile
 %if 0%{?fedora} || 0%{?rhel} >= 8
