--- a/stdci.yaml
+++ b/stdci.yaml
@@ -3,9 +3,7 @@ stage:
   - build-artifacts
   - build-artifacts-manual
   - check-merged
-  - check-patch:
-      runtime-requirements:
-        support-nesting-level: 2
+  - check-patch
 distro: el7
 release_branches:
     ovirt-4.2: ovirt-4.2
