stig: add openscap support to imgbased
- imgbased will try to detect if a security profile was selected during
installation, and will save the datastream file and the profile id under
/var/lib/imgbased/openscap

- On each system update, if imgbased has a registered profile, it will
reapply the profile on the new layer

Bug-Url: https://bugzilla.redhat.com/show_bug.cgi?id=1654253
Change-Id: Ic5aa1ed6cbf6c49e9d52b1d6dd728050b85ca9ae
Signed-off-by: Yuval Turgeman <yturgema@redhat.com>

--- a/packaging/rpm/imgbased.spec.in
+++ b/packaging/rpm/imgbased.spec.in
@@ -61,12 +61,14 @@ layers atop.
 %package -n python-imgbased
 Summary: A python 2 module for imgbased
 Requires:       rpm-python
+Requires:       systemd-python
 BuildRequires:       python-devel
 %if 0%{?with_check}
 BuildRequires:       python-pep8
 BuildRequires:       pyflakes
 BuildRequires:       python-nose
 BuildRequires:       python-six
+BuildRequires:       systemd-python
 %endif
 
 %description -n python-imgbased
@@ -82,8 +84,9 @@ BuildRequires:       python%{python3_pkgversion}-pep8
 BuildRequires:       python%{python3_pkgversion}-pyflakes
 BuildRequires:       python%{python3_pkgversion}-nose
 BuildRequires:       python%{python3_pkgversion}-six
+BuildRequires:       python%{python3_pkgversion}-systemd
 %endif
-Recommends:          python%{python3_pkgversion}-systemd
+Requires:          python%{python3_pkgversion}-systemd
 Requires:       python%{python3_pkgversion}-rpm
 
 %description -n python%{python3_pkgversion}-imgbased
