--- a/packaging/rpm/imgbased.spec.in
+++ b/packaging/rpm/imgbased.spec.in
@@ -175,6 +175,9 @@ make -C py3 install DESTDIR="%{buildroot}"
 %endif
 
 %changelog
+* Tue Jan 15 2019 Yuval Turgeman <yturgema@redhat.com> - 1.1.3-1
+- Relabel for selinux in permissive (rhbz#1655003)
+
 * Wed Jan 09 2019 Yuval Turgeman <yturgema@redhat.com> - 1.1.2-1
 - Disable grub os probes (rhbz#1501236)
 - Call relabel_selinux at the very end of the update (rhbz#1655003)
