--- a/packaging/rpm/imgbased.spec.in
+++ b/packaging/rpm/imgbased.spec.in
@@ -169,6 +169,9 @@ make -C py3 install DESTDIR="%{buildroot}"
 %endif
 
 %changelog
+* Mon Feb 25 2019 Yuval Turgeman <yturgema@redhat.com> - 1.1.5-1
+- Do not use hostonly when generating an initrd (rhbz#1652519)
+
 * Wed Feb 20 2019 Yuval Turgeman <yturgema@redhat.com> - 1.1.4-1
 - Added imgbase-setup.service
 - Apply registered OpenSCAP profile on updates (rhbz#1654253)
