Lock rpm versions in image
Creating a versionlock.list file for both layers on upgrade

Bug-Url: https://bugzilla.redhat.com/show_bug.cgi?id=1688835
Change-Id: I62ce321f8db8d4291395a3f8614cbfa6638e5d5b
Signed-off-by: Yuval Turgeman <yturgema@redhat.com>
(cherry picked from commit 7abcba09e72b90c395bf9d2040c86e140af455a8)

--- a/packaging/rpm/imgbased.spec.in
+++ b/packaging/rpm/imgbased.spec.in
@@ -62,6 +62,7 @@ layers atop.
 Summary: A python 2 module for imgbased
 Requires:       rpm-python
 Requires:       systemd-python
+Requires:       yum-plugin-versionlock
 BuildRequires:       python-devel
 %if 0%{?with_check}
 BuildRequires:       python-pep8
@@ -88,6 +89,7 @@ BuildRequires:       python%{python3_pkgversion}-systemd
 %endif
 Requires:          python%{python3_pkgversion}-systemd
 Requires:       python%{python3_pkgversion}-rpm
+Requires:       dnf-plugin-versionlock
 
 %description -n python%{python3_pkgversion}-imgbased
 python%{python3_pkgversion}-imgbased is a python 3 library to manage lvm layers
