openscap: move imgbased openscap directory
- The rpm persistence plugins use /var/imgbased, so openscap should use
the same path as well
- Require openscap-scanner for oscap

Change-Id: I1e4de09bfdccd162b28117f03b0654c418b81f1d
Signed-off-by: Yuval Turgeman <yturgema@redhat.com>

--- a/packaging/rpm/imgbased.spec.in
+++ b/packaging/rpm/imgbased.spec.in
@@ -49,6 +49,7 @@ Requires:            util-linux
 Requires:            augeas
 Requires:            rsync
 Requires:            tar
+Requires:            openscap-scanner
 
 %{!?_licensedir:%global license %%doc}
 
