--- a/src/plugin-yum/imgbased-persist.conf
+++ b/src/plugin-yum/imgbased-persist.conf
@@ -1,3 +1,3 @@
 [main]
 enabled=1
-excluded_pkgs=redhat-virtualization-host-image-update,ovirt-node-ng-image-update
+excluded_pkgs=redhat-virtualization-host-image-update,ovirt-node-ng-image-update,kernel
