scripts: require python for subpackages
Change-Id: I684cf64d73c9ffff2eb7372a80a28524e0237e6b
Signed-off-by: Yuval Turgeman <yturgema@redhat.com>

--- a/packaging/rpm/imgbased.spec.in
+++ b/packaging/rpm/imgbased.spec.in
@@ -64,6 +64,7 @@ Summary: A python 2 module for imgbased
 Requires:       rpm-python
 Requires:       systemd-python
 Requires:       yum-plugin-versionlock
+Requires:       python
 BuildRequires:       python-devel
 %if 0%{?with_check}
 BuildRequires:       python-pep8
@@ -88,9 +89,10 @@ BuildRequires:       python%{python3_pkgversion}-nose
 BuildRequires:       python%{python3_pkgversion}-six
 BuildRequires:       python%{python3_pkgversion}-systemd
 %endif
-Requires:          python%{python3_pkgversion}-systemd
+Requires:       python%{python3_pkgversion}-systemd
 Requires:       python%{python3_pkgversion}-rpm
 Requires:       dnf-plugin-versionlock
+Requires:       python%{python3_pkgversion}
 
 %description -n python%{python3_pkgversion}-imgbased
 python%{python3_pkgversion}-imgbased is a python 3 library to manage lvm layers
