--- a/configure.ac
+++ b/configure.ac
@@ -63,6 +63,11 @@ if test "x$ASCIIDOC" = "x"; then
         AC_MSG_ERROR([asciidoc not found - cannot create man pages without it])
 fi
 
+AC_CHECK_PROGS(CODESTYLE_CHECKER, [pycodestyle-3 pep8])
+if test "x$CODESTYLE_CHECKER" = "x"; then
+        AC_MSG_ERROR([codestyle checker not found])
+fi
+
 AM_PATH_PYTHON
 
 AC_CONFIG_FILES([Makefile
