build: make pep8/pycodestyle optional
Change-Id: I42990038074cf7aface4a003429a0c76363e6e31
Signed-off-by: Yuval Turgeman <yturgema@redhat.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -87,8 +87,12 @@ check-pyflakes: $(SRCFILES)
 	find . -xdev -name \*.py | xargs pyflakes
 
 check-codestyle: $(SRCFILES)
+if HAVE_CODESTYLE_CHECKER
 	@echo "[CHECK] @CODESTYLE_CHECKER@"
 	find . -xdev -name \*.py | xargs @CODESTYLE_CHECKER@
+else
+	@echo "[CHECK] Codestyle checker not found, skipping"
+endif
 
 check-nosetests: $(SRCFILES)
 	@echo "[CHECK] nosetests"
