--- a/packaging/rpm/imgbased.spec.in
+++ b/packaging/rpm/imgbased.spec.in
@@ -172,6 +172,9 @@ make -C py3 install DESTDIR="%{buildroot}"
 %endif
 
 %changelog
+* Tue Aug 20 2019 Yuval Turgeman <yturgema@redhat.com> - 1.1.10-1
+- Warn if SELinux is diabled on upgrades (rhbz#1724102)
+
 * Tue Jul 16 2019 Yuval Turgeman <yturgema@redhat.com> - 1.1.9-1
 - Check for layer tag on managed LVs (rhbz#1729023)
 
