automation: add el8
Change-Id: I9ae23e8e4689ecd0d54b91da3faae3cee9cd7582
Signed-off-by: Sandro Bonazzola <sbonazzo@redhat.com>

--- a/stdci.yaml
+++ b/stdci.yaml
@@ -6,6 +6,6 @@ stage:
   - check-patch:
       runtime-requirements:
         support-nesting-level: 2
-distro: [el7, fc29, fc30]
+distro: [el7, el8, fc29, fc30]
 release_branches:
     master: ovirt-master
