automation: check for nosetests
check the path for nosetests and skip test if not found.

Change-Id: I0bb20f4b49152067c53e63f5d87c8c254bad18d0
Signed-off-by: Sandro Bonazzola <sbonazzo@redhat.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -94,11 +94,15 @@ else
 endif
 
 check-nosetests: $(SRCFILES)
+if HAVE_NOSETESTS
 	@echo "[CHECK] nosetests"
-	nosetests --no-byte-compile --with-xunit \
+	@NOSETESTS@ --no-byte-compile --with-xunit \
 		--with-coverage --cover-erase --cover-tests \
 		--cover-package=imgbased --cover-xml --cover-min-percentage=25 \
 		--with-doctest --doctest-tests
+else
+	@echo "[CHECK] nosetests not found, skipping"
+endif
 
 
 check-code: check-pyflakes check-codestyle check-nosetests
