automation: modify check-patch for el8
python3-coverage is not available, use platform-python-coverage instead

Change-Id: I4e2fb0b7164917934784b9a90c7388416fd15a3b
Signed-off-by: Yuval Turgeman <yturgema@redhat.com>

--- a/stdci.yaml
+++ b/stdci.yaml
@@ -6,6 +6,7 @@ stage:
   - check-patch:
       runtime-requirements:
         support-nesting-level: 2
+        isolation_level: container
 distro: [el7, el8, fc29, fc30]
 release_branches:
     master: ovirt-master
