build: fix nosetest checks with python3
Bug-Url: https://bugzilla.redhat.com/1759938
Bug-Url: https://bugzilla.redhat.com/1760809
Bug-Url: https://bugzilla.redhat.com/1760812
Change-Id: I0ce13c1808b8fd3263f70a4f61abb4688f20ba45
Signed-off-by: Yuval Turgeman <yturgema@redhat.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -95,8 +95,8 @@ endif
 
 check-nosetests: $(SRCFILES)
 if HAVE_NOSETESTS
-	@echo "[CHECK] nosetests"
-	@NOSETESTS@ --no-byte-compile --with-xunit \
+	@echo "[CHECK] @NOSETESTS@"
+	@NOSETESTS@ --verbosity=2 --no-byte-compile --with-xunit \
 		--with-coverage --cover-erase --cover-tests \
 		--cover-package=imgbased --cover-xml --cover-min-percentage=25 \
 		--with-doctest --doctest-tests
