build: bump to 1.1.12
Change-Id: Ia57400e64134dcd7700bb8c64f896f67713ad58f
Signed-off-by: Yuval Turgeman <yturgema@redhat.com>

--- a/packaging/rpm/imgbased.spec.in
+++ b/packaging/rpm/imgbased.spec.in
@@ -172,6 +172,9 @@ make -C py3 install DESTDIR="%{buildroot}"
 %endif
 
 %changelog
+* Sun Nov 10 2019 Yuval Turgeman <yturgema@redhat.com> - 1.1.12-1
+- osupdater: install update rpm from environment variable (rhbz#1747410)
+
 * Thu Oct 17 2019 Sandro Bonazzola <sbonazzo@redhat.com> - 1.1.11-1
 - osupdater: stop vdsm services before update (rhbz#1747410)
 
