--- a/packaging/rpm/imgbased.spec.in
+++ b/packaging/rpm/imgbased.spec.in
@@ -174,6 +174,9 @@ make -C py3 install DESTDIR="%{buildroot}"
 %endif
 
 %changelog
+* Tue Nov 12 2019 Yuval Turgeman <yturgema@redhat.com> - 1.2.6-1
+- Install first image-update rpm (rhbz#1770683)
+
 * Thu Nov 07 2019 Yuval Turgeman <yturgema@redhat.com> - 1.2.5-1
 - Disable repos if set-enabled is not set (rhbz#1766579)
 - Decode bytes when running oscap (rhbz#1760217)
