automation: disable fc30 for now
Change-Id: I3b01167c940ef44039c60747b7b03a5bf6ead317
Signed-off-by: Yuval Turgeman <yturgema@redhat.com>

--- a/stdci.yaml
+++ b/stdci.yaml
@@ -7,6 +7,6 @@ stage:
       runtime-requirements:
         support-nesting-level: 2
         isolation_level: container
-distro: [el8, fc30]
+distro: [el8]
 release_branches:
     master: ovirt-master
