--- a/src/plugin-dnf/imgbased-persist.conf
+++ b/src/plugin-dnf/imgbased-persist.conf
@@ -1,4 +1,4 @@
 [main]
 enabled=1
-exclude_pkgs=redhat-virtualization-host-image-update,ovirt-node-ng-image-update
+excluded_pkgs=redhat-virtualization-host-image-update,ovirt-node-ng-image-update,rhvm-appliance,ovirt-engine-appliance
 bootsetup_pkgs=kernel-core
