core: skip volume creation
Volumes are created by default in anaconda's install class.  Touching a
file in /var/imgbased/.skip-volumes will instruct imgbased to not alter
the system's storage layout

Bug-Url: https://bugzilla.redhat.com/1777886
Change-Id: Ic0269e6513040fdcc2e20fba767e0d3169869a40
Signed-off-by: Yuval Turgeman <yturgema@redhat.com>

--- a/configure.ac
+++ b/configure.ac
@@ -74,6 +74,6 @@ AM_PATH_PYTHON
 
 AC_CONFIG_FILES([Makefile
                  packaging/rpm/imgbased.spec
-                 src/imgbased/config.py])
+                 src/imgbased/constants.py])
 
 AC_OUTPUT
