--- a/packaging/rpm/imgbased.spec.in
+++ b/packaging/rpm/imgbased.spec.in
@@ -174,6 +174,14 @@ make -C py3 install DESTDIR="%{buildroot}"
 %endif
 
 %changelog
+* Tue Jan 21 2020 Yuval Turgeman <yturgema@redhat.com> - 1.2.7-1
+- Use current layer only when remediating /etc (rhbz#1780331)
+- Handle grubenv in EFI environment (rhbz#1779661, rhbz#1765250)
+- Touch a file to mark a successfull upgrade (rhbz#1770893)
+- Do not persist appliance packages (rhbz#1777886)
+- Skip volume creation during init and update (rhbz#1777886)
+- Clear dnf cache
+
 * Tue Nov 12 2019 Yuval Turgeman <yturgema@redhat.com> - 1.2.6-1
 - Install first image-update rpm (rhbz#1770683)
 
