--- a/packaging/rpm/imgbased.spec.in
+++ b/packaging/rpm/imgbased.spec.in
@@ -174,6 +174,9 @@ make -C py3 install DESTDIR="%{buildroot}"
 %endif
 
 %changelog
+* Tue Mar 10 2020 Sandro Bonazzola <sbonazzo@redhat.com> - 1.2.8-1
+- bootsetup: add discard to rootflags (rhbz#1803017)
+
 * Tue Jan 21 2020 Yuval Turgeman <yturgema@redhat.com> - 1.2.7-1
 - Use current layer only when remediating /etc (rhbz#1780331)
 - Handle grubenv in EFI environment (rhbz#1779661, rhbz#1765250)
