build: bump to 1.2.10-1
Change-Id: If1668e0c62200dc4b1fe4b1c46ba0663e1d5bd51
Signed-off-by: Nir Levy <nlevy@redhat.com>

--- a/packaging/rpm/imgbased.spec.in
+++ b/packaging/rpm/imgbased.spec.in
@@ -174,6 +174,9 @@ make -C py3 install DESTDIR="%{buildroot}"
 %endif
 
 %changelog
+* Wed Jun 03 2020 Nir Levy <nlevy@redhat.com> - 1.2.10-1
+- bootsetup: keep cmdline arguments order (rhbz#1827232)
+
 * Fri Apr 17 2020 Sandro Bonazzola <sbonazzo@redhat.com> - 1.2.9-1
 - utils: verify grubenv size (rhbz#1809367)
 
