--- a/packaging/rpm/imgbased.spec.in
+++ b/packaging/rpm/imgbased.spec.in
@@ -174,6 +174,9 @@ make -C py3 install DESTDIR="%{buildroot}"
 %endif
 
 %changelog
+* Wed Sep 02 2020 Nir Levy <nlevy@redhat.com> - 1.2.11-1
+- Making sure support for multipath in initramfs (rhbz#1837864)
+
 * Wed Jun 03 2020 Nir Levy <nlevy@redhat.com> - 1.2.10-1
 - bootsetup: keep cmdline arguments order (rhbz#1827232)
 
