--- a/packaging/rpm/imgbased.spec.in
+++ b/packaging/rpm/imgbased.spec.in
@@ -174,6 +174,11 @@ make -C py3 install DESTDIR="%{buildroot}"
 %endif
 
 %changelog
+* Thu Sep 17 2020 Nir Levy <nlevy@redhat.com> - 1.2.12-1
+- Reconfigure lvm filter (rhbz#1837864)
+- making sure lvm filters from the old layer are set
+  to stable name based on UUID
+
 * Wed Sep 02 2020 Nir Levy <nlevy@redhat.com> - 1.2.11-1
 - Making sure support for multipath in initramfs (rhbz#1837864)
 
