--- a/packaging/rpm/imgbased.spec.in
+++ b/packaging/rpm/imgbased.spec.in
@@ -174,6 +174,10 @@ make -C py3 install DESTDIR="%{buildroot}"
 %endif
 
 %changelog
+* Wed Sep 30 2020 Nir Levy <nlevy@redhat.com> - 1.2.13-1
+- osupdater: migrate_etc
+  copy folders to correct dirname (rhbz#1883195)
+
 * Thu Sep 17 2020 Nir Levy <nlevy@redhat.com> - 1.2.12-1
 - Reconfigure lvm filter (rhbz#1837864)
 - making sure lvm filters from the old layer are set
