--- a/packaging/rpm/imgbased.spec.in
+++ b/packaging/rpm/imgbased.spec.in
@@ -174,6 +174,9 @@ make -C py3 install DESTDIR="%{buildroot}"
 %endif
 
 %changelog
+* Wed Dec 02 2020 Nir Levy <nlevy@redhat.com> - 1.2.14-1
+- osupdater: Change crypto-policies files permissions (rhbz#1902646)
+
 * Wed Sep 30 2020 Nir Levy <nlevy@redhat.com> - 1.2.13-1
 - osupdater: migrate_etc
   copy folders to correct dirname (rhbz#1883195)
