--- a/packaging/rpm/imgbased.spec.in
+++ b/packaging/rpm/imgbased.spec.in
@@ -174,6 +174,10 @@ make -C py3 install DESTDIR="%{buildroot}"
 %endif
 
 %changelog
+* Wed Jan 13 2021 Asaf Rachmani <arachman@redhat.com> - 1.2.15-1
+- osupdater: Add chronyd.service to the required_files list (rhbz#1903777)
+- osupdater: Do not change UID/GID in remediate_etc (rhbz#1909782)
+
 * Wed Dec 02 2020 Nir Levy <nlevy@redhat.com> - 1.2.14-1
 - osupdater: Change crypto-policies files permissions (rhbz#1902646)
 
