--- a/packaging/rpm/imgbased.spec.in
+++ b/packaging/rpm/imgbased.spec.in
@@ -174,6 +174,11 @@ make -C py3 install DESTDIR="%{buildroot}"
 %endif
 
 %changelog
+* Fri Jan 29 2021 Nir Levy <nlevy@redhat.com> - 1.2.16-1
+- osupdater: fix upgrade failed for FileNotFoundError
+  caused by bug in crypto-policy (rhbz#1921646)
+  (rhbz#1918207, rhbz#1921553)
+
 * Wed Jan 13 2021 Asaf Rachmani <arachman@redhat.com> - 1.2.15-1
 - osupdater: Add chronyd.service to the required_files list (rhbz#1903777)
 - osupdater: Do not change UID/GID in remediate_etc (rhbz#1909782)
