--- a/packaging/rpm/imgbased.spec.in
+++ b/packaging/rpm/imgbased.spec.in
@@ -174,6 +174,9 @@ make -C py3 install DESTDIR="%{buildroot}"
 %endif
 
 %changelog
+* Thu Feb 11 2021 Asaf Rachmani <arachman@redhat.com> - 1.2.17-1
+- bootsetup: copy kernel to boot partition (rhbz#1907746)
+
 * Fri Jan 29 2021 Nir Levy <nlevy@redhat.com> - 1.2.16-1
 - osupdater: fix upgrade failed for FileNotFoundError
   caused by bug in crypto-policy (rhbz#1921646)
