--- a/packaging/rpm/imgbased.spec.in
+++ b/packaging/rpm/imgbased.spec.in
@@ -174,6 +174,9 @@ make -C py3 install DESTDIR="%{buildroot}"
 %endif
 
 %changelog
+* Wed Mar 17 2021 Lev Veyde <lveyde@redhat.com> - 1.2.18-1
+- Fixed the issue with persistent RPM reinstallation (rhbz#1936972)
+
 * Thu Feb 11 2021 Asaf Rachmani <arachman@redhat.com> - 1.2.17-1
 - bootsetup: copy kernel to boot partition (rhbz#1907746)
 
