--- a/configure.ac
+++ b/configure.ac
@@ -17,10 +17,10 @@ dnl along with this program.  If not, see <http://www.gnu.org/licenses/>.
 dnl
 define([VERSION_MAJOR], [1])
 define([VERSION_MINOR], [2])
-define([VERSION_FIX], [18])
+define([VERSION_FIX], [19])
 define([VERSION_NUMBER], VERSION_MAJOR[.]VERSION_MINOR[.]VERSION_FIX)
 
-AC_INIT([imgbased], VERSION_NUMBER, [fabiand@fedoraproject.org])
+AC_INIT([imgbased], VERSION_NUMBER, [devel@ovirt.org])
 
 PACKAGE_RPM_VERSION="VERSION_NUMBER"
 AC_SUBST([PACKAGE_RPM_VERSION])
