--- a/packaging/rpm/imgbased.spec.in
+++ b/packaging/rpm/imgbased.spec.in
@@ -20,7 +20,7 @@
 
 Name:           imgbased
 Version:        @PACKAGE_RPM_VERSION@
-Release:        %{?_release}%{?!_release:0.1}%{?dist}
+Release:        %{?_release}%{?!_release:1}%{?dist}
 Summary:        Tools to work with an image based rootfs
 
 License:        GPLv2+
@@ -174,6 +174,9 @@ make -C py3 install DESTDIR="%{buildroot}"
 %endif
 
 %changelog
+* Tue Apr 20 2021 Lev Veyde <lveyde@redhat.com> - 1.2.19-1
+- Added auto-healing for persistent RPM reinstallation (rhbz#1936972)
+
 * Wed Mar 17 2021 Lev Veyde <lveyde@redhat.com> - 1.2.18-1
 - Fixed the issue with persistent RPM reinstallation (rhbz#1936972)
 
