--- a/packaging/rpm/imgbased.spec.in
+++ b/packaging/rpm/imgbased.spec.in
@@ -174,6 +174,9 @@ make -C py3 install DESTDIR="%{buildroot}"
 %endif
 
 %changelog
+* Wed May 19 2021 Lev Veyde <lveyde@redhat.com> - 1.2.20-1
+- Fixed SELinux policy issue (rhbz#1955415)
+
 * Tue Apr 20 2021 Lev Veyde <lveyde@redhat.com> - 1.2.19-1
 - Added auto-healing for persistent RPM reinstallation (rhbz#1936972)
 
