--- a/packaging/rpm/imgbased.spec.in
+++ b/packaging/rpm/imgbased.spec.in
@@ -174,6 +174,9 @@ make -C py3 install DESTDIR="%{buildroot}"
 %endif
 
 %changelog
+* Thu May 27 2021 Lev Veyde <lveyde@redhat.com> - 1.2.21-1
+- Fixed SUID/SGID handling issue (rhbz#1964490)
+
 * Wed May 19 2021 Lev Veyde <lveyde@redhat.com> - 1.2.20-1
 - Fixed SELinux policy issue (rhbz#1955415)
 
