--- a/packaging/rpm/imgbased.spec.in
+++ b/packaging/rpm/imgbased.spec.in
@@ -174,6 +174,9 @@ make -C py3 install DESTDIR="%{buildroot}"
 %endif
 
 %changelog
+* Wed Jul 14 2021 Lev Veyde <lveyde@redhat.com> - 1.2.23-1
+- Fixed vdsm-tool running env. (rhbz#1979624)
+
 * Sun Jul 11 2021 Lev Veyde <lveyde@redhat.com> - 1.2.22-1
 - Fixed SELinux binary policy migration issue (rhbz#1979624)
 
