--- a/stdci.yaml
+++ b/stdci.yaml
@@ -7,6 +7,12 @@ stage:
       runtime-requirements:
         support-nesting-level: 2
         isolation_level: container
-distro: [el8]
+
+distro:
+  - el8
+  - el9stream:
+      runtime-requirements:
+        host_distro: newer
+
 release_branches:
-    master: ovirt-master
+  master: ovirt-master
