copr: add missing asciidoc in mock root
Change-Id: Idcf377ebfc3f483452b2a4c31fb4c21ea78cebfa
Signed-off-by: Sandro Bonazzola <sbonazzo@redhat.com>

--- a/.copr/Makefile
+++ b/.copr/Makefile
@@ -1,5 +1,5 @@
 srpm:
-	dnf -y install git autoconf automake make
+	dnf -y install git autoconf automake make asciidoc
 	$(eval SUFFIX=$(shell sh -c " echo '0.0.$$(date -u +%Y%m%d%H%M%S).git$$(git rev-parse --short HEAD)'"))
 	mkdir -p tmp.repos/SOURCES
 	./autogen.sh
