--- a/.copr/Makefile
+++ b/.copr/Makefile
@@ -1,5 +1,7 @@
-srpm:
+installdeps:
 	dnf -y install git autoconf automake make asciidoc
+
+srpm: installdeps
 	$(eval SUFFIX=$(shell sh -c " echo '0.0.$$(date -u +%Y%m%d%H%M%S).git$$(git rev-parse --short HEAD)'"))
 	mkdir -p tmp.repos/SOURCES
 	./autogen.sh
