copr: fix missing suffix in built rpms
Change-Id: Ib478449c155ba89d911d72bf5065a7eb4882357d
Signed-off-by: Sandro Bonazzola <sbonazzo@redhat.com>

--- a/.copr/Makefile
+++ b/.copr/Makefile
@@ -1,13 +1,16 @@
+.PHONY: installdeps srpm
+
 installdeps:
 	dnf -y install git autoconf automake make asciidoc
 
 srpm: installdeps
 	$(eval SUFFIX=$(shell sh -c " echo '0.0.$$(date -u +%Y%m%d%H%M%S).git$$(git rev-parse --short HEAD)'"))
+	# changing the spec file as passing -D won't preserve the suffix when rebuilding in mock
+	sed "s:%{?release_suffix}:${SUFFIX}:" -i packaging/rpm/imgbased.spec.in
 	mkdir -p tmp.repos/SOURCES
 	./autogen.sh
 	make dist
 	rpmbuild \
 		-D "_topdir tmp.repos" \
-		-D "_release ${SUFFIX}" \
 		-ts ./*.tar.xz
 	cp tmp.repos/SRPMS/*.src.rpm $(outdir)
