--- a/.copr/Makefile
+++ b/.copr/Makefile
@@ -6,7 +6,8 @@ installdeps:
 srpm: installdeps
 	$(eval SUFFIX=$(shell sh -c " echo '0.0.$$(date -u +%Y%m%d%H%M%S).git$$(git rev-parse --short HEAD)'"))
 	# changing the spec file as passing -D won't preserve the suffix when rebuilding in mock
-	sed "s:%{?release_suffix}:${SUFFIX}:" -i packaging/rpm/imgbased.spec.in
+	sed "s:%{?_release}:${SUFFIX}:" -i packaging/rpm/imgbased.spec.in
+	sed "s/%{?\!_release:1}//" -i packaging/rpm/imgbased.spec.in
 	mkdir -p tmp.repos/SOURCES
 	./autogen.sh
 	make dist
